# Staqtapp-1X

./: CHANGELOG.md  CHECKSUMS.sha256  MANIFEST_SHA256.txt  README.md  RELEASE_MANIFEST.json  RELEASE_NOTES_1.5.0.md  RELEASE_NOTES_1.5.1.md  RELEASE_NOTES_1.5.2.md  RELEASE_NOTES_1.5.3.md  VALIDATION.txt  pyproject.toml
benchmark-output-1.5.0/: benchmark-results.csv  benchmark-results.json  benchmark-summary.md
benchmark-output-1.5.1/: benchmark-results.csv  benchmark-results.json  benchmark-summary.md
benchmarks/: BASELINE_1_3_0.json  PERFORMANCE_1_4_0_100K.json  PERFORMANCE_1_4_0_500K.json  PERFORMANCE_COMPARISON_1_3_TO_1_4.json
docs/: ADVANCE_FEATURE_STATUS.md  COMPATIBILITY_MATRIX.md  GORILLA_BENCHMARK_REPORT_1_4_9.md  KNOWN_LIMITATIONS.md  MAINTENANCE_GUIDE_1_5.md  MIGRATION_GUIDE.md  PERFORMANCE_METHODOLOGY.md  PERFORMANCE_REPORT_1_4_0.md  PUBLIC_API_CONTRACT.md  RECOVERY_GUIDE.md  RELEASE_NOTES_1_3_0.md  RELEASE_NOTES_1_4_0.md  RELEASE_NOTES_1_4_1.md  RELEASE_NOTES_1_4_2.md  RELEASE_NOTES_1_4_3.md  RELEASE_NOTES_1_4_4.md  RELEASE_NOTES_1_4_5.md  RELEASE_NOTES_1_4_6.md  RELEASE_NOTES_1_4_7.md  RELEASE_NOTES_1_4_8.md  RELEASE_NOTES_1_4_9.md  REVISION_MODEL_1_4.md  ROADMAP_STATUS_1_3_0.md  ROADMAP_STATUS_1_4_0.md  SECURITY_MODEL.md  SQTI_FORMAT_1_4.md  STAQTAPP_1X_OVERHAUL_ROADMAP.txt  TYPED_VALUE_FORMAT_1_4.md  WRITE_BATCHING_1_5.md
tests/: conftest.py  spawn_check.py  test_contract.py  test_core.py  test_gorilla_harness.py  test_integrity_maps.py  test_json_backends.py  test_maintenance.py  test_mapped_engine.py  test_multiprocessing.py  test_non_halting.py  (+8 more)
(+30 files in other folders)
