[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "staqtapp"
version = "1.5.3"
description = "Pure-Python mmap and transactional engine for legacy-compatible SQTPP virtual filesystems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Staqtapp Project"}]
keywords = ["storage", "vfs", "transactional", "sqtpp"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Database :: Database Engines/Servers",
]

[project.optional-dependencies]
fastjson = ["orjson>=3.10"]

[project.scripts]
staqtapp = "staqtapp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["staqtapp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.package-data]
staqtapp = ["py.typed"]
